--- a/canvas.html
+++ b/canvas.html
@@ -665,5 +665,12 @@
         init();
 
     </script>
+    <script src="src/js/auth.js"></script>
+    <script>
+        // apply auth guard for admin pages
+        const cfg = (typeof firebaseConfig !== 'undefined') ? firebaseConfig : {};
+        NFCAUTH.init(cfg);
+        NFCAUTH.requireAuth('login.html');
+    </script>
 </body>
 </html>
