--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
     <script>
-    const firebaseConfig = {
+        const firebaseConfig = {
       apiKey: "AIzaSyBy9GDhhKPoeUBWdBH2Q4mYv4yI2MB3_E0",
       authDomain: "nfc-kedai-kuning.firebaseapp.com",
       projectId: "nfc-kedai-kuning",
@@ -21,6 +21,7 @@
     };
     firebase.initializeApp(firebaseConfig);
     </script>
+    <script src="src/js/auth.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
         body { font-family: 'Inter', sans-serif; min-height: 100vh; }
@@ -54,23 +55,25 @@
     </div>
 
     <script>
-        const allowedUser = 'admin';
-        const allowedPass = 'repair123';
+        // Use NFCAUTH wrapper (Firebase compat or local fallback)
         const form = document.getElementById('login-form');
         const errorBox = document.getElementById('login-error');
 
-        form.addEventListener('submit', (event) => {
+        // Initialize NFCAUTH wrapper (it tolerates missing Firebase SDK for local fallback)
+        NFCAUTH.init(firebaseConfig);
+        NFCAUTH.autoWireUi();
+
+        form.addEventListener('submit', async (event) => {
             event.preventDefault();
             errorBox.classList.add('hidden');
 
             const username = document.getElementById('username').value.trim();
             const password = document.getElementById('password').value.trim();
-
-            if(username === allowedUser && password === allowedPass) {
-                localStorage.setItem('nfcAuthUser', username);
+            try {
+                await NFCAUTH.signIn(username, password);
                 window.location.href = 'index.html';
-            } else {
-                errorBox.textContent = 'Invalid username or password.';
+            } catch (err) {
+                errorBox.textContent = err.message || 'Invalid username or password.';
                 errorBox.classList.remove('hidden');
             }
         });
