--- a/support-tools.html
+++ b/support-tools.html
@@ -26,6 +26,7 @@
     <script>
         NFCAUTH.init(firebaseConfig);
         NFCAUTH.requireAuth('login.html');
+        NFCAUTH.autoWireUi();
     </script>
 </head>
 <body class="min-h-screen text-slate-100">
