--- a/register-card.html
+++ b/register-card.html
@@ -22,12 +22,12 @@
         };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-    </script>
-    <script src="src/js/auth.js"></script>
-    <script>
-        NFCAUTH.init(firebaseConfig);
-        NFCAUTH.requireAuth('login.html');
-        NFCAUTH.autoWireUi();
+        </script>
+        <script src="src/js/auth.js"></script>
+        <script>
+            NFCAUTH.init(firebaseConfig);
+            NFCAUTH.requireAuth('login.html');
+            NFCAUTH.autoWireUi();
     </script>
 </head>
 <body class="min-h-screen text-slate-100">
@@ -174,8 +174,10 @@
                 registerStatus.classList.remove('hidden');
                 registerStatus.textContent = `Saving to server ...`;
                 const record = collectFormData(parsed);
-                try {
-                    await db.collection('repairs').doc(parsed).set(record, {merge:true});
+                        try {
+                            const cur = (typeof NFCAUTH !== 'undefined' && NFCAUTH.getCurrentUser) ? NFCAUTH.getCurrentUser() : null;
+                            if(!cur) throw new Error('Not authenticated');
+                            await db.collection('repairs').doc(parsed).set(record, {merge:true});
                     registerStatus.textContent = `UID ${parsed} captured. Ticket stored in Firestore.`;
                 } catch (e) {
                     registerStatus.textContent = `❌ Error saving to Firestore: ${e.message}`;
